--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikewatching</title>
-  </head>
-  <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bikewatching</title>
+
+  <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="global.css" />
+  <link rel="stylesheet" href="map.css" />
+
+  <script src="map.js" type="module"></script>
+</head>
+<body>
+  <header>
+    <h1>🚴‍♂️ Bikewatching: Boston</h1>
+    <label>
+      Filter by time:
+      <input type="range" id="time-slider" min="0" max="1440" value="-1" step="30">
+      <time id="selected-time"></time>
+      <em id="any-time">(any time)</em>
+    </label>
+  </header>
+
+<div id="map"></div>
+
+<div class="legend">
+  <div class="legend-title">Legend:</div>
+  <div class="legend-item" style="--departure-ratio: 1;">
+    <span class="swatch"></span>
+    More departures
+  </div>
+  <div class="legend-item" style="--departure-ratio: 0.5;">
+    <span class="swatch"></span>
+    Balanced
+  </div>
+  <div class="legend-item" style="--departure-ratio: 0;">
+    <span class="swatch"></span>
+    More arrivals
+  </div>
+</div>
+
+</body>
 </html>
